[package]
name = "io-reactor"
version = "0.2.0"
description = "Concurrent I/O resource management using reactor pattern"
authors = [
    "Dr. Maxim Orlovsky <orlovsky@ubideco.org>",
    "Alexis Sellier <alexis@cloudhead.io>"
]
keywords = ["reactor", "networking", "patterns", "concurrency", "poll"]
categories = ["concurrency", "asynchronous", "network-programming", "rust-patterns"]
homepage = "https://github.com/rust-amplify"
repository = "https://github.com/rust-amplify/io-reactor"
rust-version = "1.65" # Due to if ... let clause
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[lib]
name = "reactor"

[dependencies]
amplify = { version = "4.0.0", features = ["hex"] }
crossbeam-channel = "0.5.8"
popol = { version = "2.2.0", optional = true }
polling = { version = "2.7.0", optional = true }
# epoll = { version = "4.3.1", optional = true } - NB: epoll not supported on MacOS
mio = { version = "0.8.6", optional = true }
log = { version = "0.4.17", optional = true, features = ["kv_unstable"] }
libc = "0.2.139"

[features]
default = ["popol"]
all = [
    "popol",
    "polling",
#    "epoll",
    "mio",
    "log"
]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
