[package]
name = "io-reactor"
version = "0.5.2"
description = "Concurrent I/O resource management using reactor pattern"
authors = [
    "Dr. Maxim Orlovsky <orlovsky@ubideco.org>",
    "Alexis Sellier <alexis@cloudhead.io>"
]
keywords = ["reactor", "networking", "patterns", "concurrency", "poll"]
categories = ["concurrency", "asynchronous", "network-programming", "rust-patterns"]
homepage = "https://github.com/rust-amplify"
repository = "https://github.com/rust-amplify/io-reactor"
rust-version = "1.66" # Due to amplify dependency
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[lib]
name = "reactor"

[dependencies]
amplify = { version = "4.6.0", features = ["hex"] }
crossbeam-channel = "0.5.13"
popol = { version = "3.0.0", optional = true }
polling = { version = "3.7.2", optional = true }
# epoll = { version = "4.3.1", optional = true } - NB: epoll not supported on MacOS
mio = { version = "1.0.0", optional = true }
log = { version = "0.4.22", optional = true, features = ["kv_unstable"] }

[features]
default = ["popol"]
all = [
    "popol",
    "polling",
    #    "epoll",
    "mio",
    "log"
]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
