[package]
name = "io-reactor"
version = "0.6.0"
description = "Concurrent I/O resource management using reactor pattern"
authors = [
    "Dr. Maxim Orlovsky <orlovsky@ubideco.org>",
    "Alexis Sellier <alexis@cloudhead.io>"
]
keywords = ["reactor", "networking", "patterns", "concurrency", "poll"]
categories = ["concurrency", "asynchronous", "network-programming", "rust-patterns"]
homepage = "https://github.com/rust-amplify"
repository = "https://github.com/rust-amplify/io-reactor"
rust-version = "1.75" # Due to amplify dependency
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[lib]
name = "reactor"

[dependencies]
amplify = { version = "4.8.0", features = ["hex"] }
crossbeam-channel = "0.5.15"
popol = { version = "3.0.1", optional = true }
polling = { version = "3.7.4", optional = true }
# epoll = { version = "4.3.1", optional = true } - NB: epoll not supported on MacOS
mio = { version = "1.0.3", optional = true }
log = { version = "0.4.27", optional = true, features = ["kv_unstable"] }

[features]
default = ["popol"]
all = [
    "popol",
    "polling",
    #    "epoll",
    "mio",
    "log"
]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
